--- a/package.json
+++ b/package.json
@@ -1,12 +1,24 @@
 {
-  "name": "react-nw",
+  "name": "missubear",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
+  "main": "index.html",
+  "window": {
+    "toolbar": false,
+    "icon": "nw.png",
+    "title": "我想婧婧",
+    "resizable": true,
+    "fullscreen": false,
+    "frame": false
+  },
   "dependencies": {
     "@babel/core": "7.5.5",
     "@svgr/webpack": "4.3.2",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
+    "antd": "^3.23.2",
+    "axios": "^0.19.0",
     "babel-eslint": "10.0.2",
     "babel-jest": "^24.8.0",
     "babel-loader": "8.0.6",
@@ -44,8 +56,12 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.9.0",
     "react-app-polyfill": "^1.0.2",
+    "react-desktop": "^0.3.9",
     "react-dev-utils": "^9.0.3",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.0.1",
+    "redux": "^4.0.4",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
@@ -54,6 +70,7 @@
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.2",
     "url-loader": "2.1.0",
+    "uuid-js": "^0.7.5",
     "webpack": "4.39.1",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
@@ -62,7 +79,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "nw": "npm run build && build --tasks win-x64 --mirror https://npm.taobao.org/mirrors/nwjs/ ."
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -130,6 +148,55 @@
   "babel": {
     "presets": [
       "react-app"
+    ],
+    "plugins": [
+      [
+        "import",
+        {
+          "libraryName": "antd",
+          "libraryDirectory": "es",
+          "style": "css"
+        }
+      ]
+    ]
+  },
+  "devDependencies": {
+    "babel-plugin-import": "^1.12.1",
+    "node-cmd": "^3.0.0",
+    "node-sass": "^4.12.0",
+    "nw": "0.40.2-sdk",
+    "nwjs-builder-phoenix": "^1.15.0"
+  },
+  "build": {
+    "files": [
+      "build/**/*"
+    ],
+    "output": "./releases",
+    "nwVersion": "0.40.2",
+    "nwPlatforms": [
+      "win"
+    ],
+    "nwArchs": [
+      "x64"
+    ],
+    "overriddenProperties": {
+      "main": "build/index.html",
+      "window": {
+        "toolbar": false,
+        "icon": "./build/nw.png",
+        "title": "我想婧婧",
+        "resizable": true,
+        "fullscreen": false,
+        "frame": false
+      },
+      "name": "我想婧婧"
+    },
+    "win": {
+      "icon": "./public/favicon.ico",
+      "productName": "我想婧婧"
+    },
+    "targets": [
+      "zip"
     ]
   }
 }
